--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/register-company/register-company.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/register-company/register-company.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
   <div class="container mt-5">
     <div class="row justify-content-center">
-      <div class="col-lg-7 col-md-12">
+      <div class="col-lg-8 col-md-12">
         <div class="card shadow-prod border-0">
           <div class="card-header bg-transparent">
             <div class="row">
@@ -10,8 +10,7 @@
                   class="img-fluid"
                   src="assets/img/logo_produce.PNG"
                   alt="Produce"
-                  title="Produce"
-                />
+                  title="Produce"/>
               </div>
             </div>
           </div>
