--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/recover-password-company/recover-password-company.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/recover-password-company/recover-password-company.component.html
@@ -1,1 +1,70 @@
-<p>recover-password-company works!</p>
+<div class="main-content">
+    <div class="container mt-5">
+      <div class="row justify-content-center">
+        <div class="col-lg-7 col-md-12">
+          <div class="card shadow-prod border-0">
+            <div class="card-header bg-transparent">
+              <div class="row">
+                <div class="col-sm-5">
+                  <img
+                    class="img-fluid"
+                    src="assets/img/logo_produce.PNG"
+                    alt="Produce"
+                    title="Produce"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="card-body">
+              <div class="row justify-content-center mb-2">
+                <div class="col-4 col-sm-3">
+                  <img
+                    *ngIf="logo"
+                    class="img-fluid"
+                    [src]="logo"
+                    [alt]="applicationId"
+                    [title]="applicationId"
+                  />
+                </div>
+              </div>
+  
+              <div class="row justify-content-center">
+                <div class="col-12 text-center">
+                  <h1 class="display-4">Recuperar contraseña</h1>
+                </div>
+                <div class="col-12 text-center">
+                  <h3 class="">Persona Jurídica</h3>
+                </div>
+              </div>
+  
+              <div #stepper class="bs-stepper">
+                <div class="bs-stepper-content">
+                    <app-recover-password-company-form
+                    #recoverPasswordForm
+                    (onSendForm)="sendForm($event)"
+                    (onSendCancel)="sendCancel()"
+                  ></app-recover-password-company-form>
+                </div>
+              </div>
+  
+              <div class="col-sm-12">
+                <div class="row justify-content-center">
+                  <p>¿Ya tienes una cuenta?</p>
+                </div>
+                <div class="row justify-content-center">
+                  <a
+                    href="/recuperar-contrasena-persona?applicationId={{
+                      applicationId
+                    }}"
+                    style="color: #000; border-bottom: 1px solid #000"
+                    >Crea una ahora</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
