--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/recover-password-company/components/recover-password-company-form/recover-password-company-form.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/recover-password-company/components/recover-password-company-form/recover-password-company-form.component.html
@@ -74,8 +74,8 @@
             "
             class="invalid-feedback"
           >
-            El número de documento debe tener
-            {{ documentNumberLength }} dígitos.
+             El número de documento debe tener como mínimo
+             {{ documentNumberLength - 4 }} dígitos.
           </div>
         </div>
       </div>
