--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/list-applications-user/list-applications-user.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/list-applications-user/list-applications-user.component.html
@@ -9,18 +9,18 @@
             </div>
     
             <div class="row justify-content-center mb-2">
-            <div class="col-sm-4">
+            <div class="col-sm-4" *ngFor="let app of listaAplicaciones">
                 <div class="box-app">
-                    <span class="categoria"></span>
+                    <span class="categoria">{{app.nombre_categoria}}</span>
                     <div class="box-app-content">
                         <div class="img">
-                            <img alt="archivo">
+                          <img [src]="app.urlArchivo" alt="archivo">
                         </div>
-                        <span class="nombre"></span>
-                        <span class="descripcion"></span>
+                        <span class="nombre">{{app.nombre}}</span>
+                        <span class="descripcion">{{app.descripcion}}</span>
                     </div>
                     <div class="box-view">
-                      <a rel="tooltip" data-placement="bottom" title="Ir a aplicación">
+                      <a [attr.href]="app.url_extranet" rel="tooltip" data-placement="bottom" title="Ir a aplicación">
                         <button >Ver Aplicación <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
                       </a>
                     </div>
