--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/list-applications-user/list-applications-user.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/list-applications-user/list-applications-user.component.html
@@ -1,11 +1,11 @@
 <div class="main-content">
     <div class="container mt-5">
       <div class="row justify-content-center">
-        <div class="col-lg-7 col-md-12">
+        <div class="col-lg-12 col-md-12">
           <div class="card shadow-prod border-0">
             <div class="card-body">
-            <div class="row justify-content-center mb-2">
-                <h3 style="color: #000">Mis Aplicaciones</h3>
+            <div class="col-12 text-center">
+              <h1 class="display-5">Mis aplicaciones</h1>
             </div>
     
             <div class="row justify-content-center mb-2">
@@ -21,7 +21,7 @@
                     </div>
                     <div class="box-view">
                       <a [attr.href]="app.url_extranet" rel="tooltip" data-placement="bottom" title="Ir a aplicación">
-                        <button >Ver Aplicación <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
+                        <button class="buttonVer">Ver Aplicación <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
                       </a>
                     </div>
                 </div>
