--- a/Prod.LoginUnico.Web/ClientApp/src/assets/css/base.css
+++ b/Prod.LoginUnico.Web/ClientApp/src/assets/css/base.css
@@ -487,6 +487,12 @@ h6,
   line-height: 1.5;
 }
 
+.display-5 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 1.5;
+}
+
 hr {
   margin-top: 2rem;
   margin-bottom: 2rem;
@@ -18384,3 +18390,102 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
 
   height: 3px;
 }
+
+.box-app {
+  padding: 15px 15px 60px 15px;
+  background-color: white;
+  box-shadow: 1px 1px 10px black;
+  margin: 15px;
+  overflow: auto;
+  border-top: 4px solid red;
+  -webkit-animation-delay: 5s;
+  animation-delay: 5s;
+}
+
+.box-app .categoria {
+  text-transform: uppercase;
+  color: black;
+  font-size: xx-small;
+  display: block;
+  margin-bottom: 15px;
+}
+
+.box-app-content {
+  max-height: 110px;
+  min-height: 110px;
+}
+
+.box-app-content .img {
+  max-width: 200px !important;
+  float: left;
+  margin-bottom: 15px;
+  max-height: 50px !important;
+  min-height: 50px !important;
+}
+
+.box-app-content .nombre {
+  text-transform: uppercase;
+  color: #EB1E23;
+  font-size: 15px;
+  font-weight: 400;
+  float: left;
+  width: 100%;
+  max-height: 23px !important;
+  min-height: 23px !important;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.buttonVer {
+  background-color: #58595B;
+  color: #FFFFFF;
+  width: 100%;
+  font-size: 14px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border: 2px solid #58595B;
+}
+  
+
+
+.box-app-content .descripcion {
+  font-size: small;
+  color: black;
+  float: left;
+  width: 100%;
+  min-height: 40px !important;
+  max-height: 40px !important;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.box-app .box-view {
+  display: block;
+  position: absolute;
+  padding: 0 0 0 0px;
+  top: auto;
+  right: 29px;
+  bottom: 15px;
+  left: 30px;
+  height: 50px;
+  line-height: 50px;
+  font-weight: 300;
+  font-size: 16px;
+  color: #EB1E23;
+  z-index: 999;
+  transition: all .2s ease-in;
+  text-decoration: none;
+}
+
+.box-view:hover {
+  background-color: #EB1E23;
+  color: #ffffff !important;
+  text-decoration: none;
+}
+.box-view:hover a{
+  color: #000!important;
+  
+}
+
