--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/change-password-person/change-password-person.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/change-password-person/change-password-person.component.html
@@ -2,7 +2,7 @@
     <div class="container mt-5">
       <div class="row justify-content-center">
         <div class="col-lg-7 col-md-12">
-          <div class="card shadow-prod border-0">
+          <div class="card shadow-prod border-0" *ngIf="isVisibleForm"> 
             <div class="card-header bg-transparent">
               <div class="row">
                 <div class="col-sm-5">
@@ -47,6 +47,16 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="card shadow-prod border-0" *ngIf="validaSuccess">
+            <div class="col-sm-12 col-md-12">
+              <h3 class="row justify-content-center mt-4">Contraseña cambiada</h3>
+              <label class="row justify-content-center mb-4 mt-4">Tu contraseña fue guardada con exito</label>
+            </div>
+  
+           <div>
+             <button  class="btn btn-darker btn-block">Ir a inicio</button> 
+           </div>
           </div>
         </div>
       </div>
