--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/recover-password-company/recover-password-company.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/recover-password-company/recover-password-company.component.html
@@ -63,6 +63,16 @@
               </div>
             </div>
           </div>
+          <div class="card shadow-prod border-0" *ngIf="validaSuccess">
+            <div class="col-sm-12 col-md-12">
+              <h3 class="row justify-content-center mt-4">¡Listo!</h3>
+              <label class="row justify-content-center mb-4 mt-4">Se te ha enviado un link a tu correo registrado</label>
+            </div>
+  
+           <div>
+             <button  class="btn btn-darker btn-block">Ir a inicio</button> 
+           </div>
+          </div>
         </div>
       </div>
     </div>
