--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/change-password-person/change-password-person.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/change-password-person/change-password-person.component.html
@@ -55,7 +55,7 @@
             </div>
   
            <div>
-             <button  class="btn btn-darker btn-block">Ir a inicio</button> 
+             <button (click)="ir()" class="btn btn-darker btn-block">Ir a inicio</button> 
            </div>
           </div>
         </div>
