--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/change-password-company/change-password-company.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/change-password-company/change-password-company.component.html
@@ -55,7 +55,7 @@
             </div>
   
            <div>
-             <button  class="btn btn-darker btn-block">Ir a inicio</button> 
+            <a [routerLink]="['/auth/login-company']" queryParamsHandling="merge" class="btn btn-darker btn-block">Ir a inicio</a>
            </div>
           </div>
         </div>
