--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/change-password-person/change-password-person.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/change-password-person/change-password-person.component.html
@@ -55,8 +55,9 @@
             </div>
   
            <div>
-             <button (click)="ir()" class="btn btn-darker btn-block">Ir a inicio</button> 
-           </div>
+              <!-- <button (click)="ir()" class="btn btn-darker btn-block">Ir a inicio</button>  -->
+              <a [routerLink]="['/auth/login-person']" queryParamsHandling="merge" class="btn btn-darker btn-block">Ir a inicio</a>
+            </div>
           </div>
         </div>
       </div>
