--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/change-password-company/change-password-company.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/change-password-company/change-password-company.component.html
@@ -58,6 +58,16 @@
             <a [routerLink]="['/auth/login-company']" queryParamsHandling="merge" class="btn btn-darker btn-block">Ir a inicio</a>
            </div>
           </div>
+
+          <div class="card shadow-prod border-0" *ngIf="VerificaIdentificador">
+            <div class="col-sm-12 col-md-12">
+              <h3 class="row justify-content-center mt-4">Enlace Invalido</h3>
+            </div>
+           <div>
+              <a [routerLink]="['/auth/recover-password-company']" queryParamsHandling="merge" class="btn btn-darker btn-block">Solicitar nuevamente</a>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
