--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/change-password-person/change-password-person.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/change-password-person/change-password-person.component.html
@@ -53,10 +53,18 @@
               <h3 class="row justify-content-center mt-4">Contraseña cambiada</h3>
               <label class="row justify-content-center mb-4 mt-4">Tu contraseña fue guardada con exito</label>
             </div>
-  
            <div>
-              <!-- <button (click)="ir()" class="btn btn-darker btn-block">Ir a inicio</button>  -->
               <a [routerLink]="['/auth/login-person']" queryParamsHandling="merge" class="btn btn-darker btn-block">Ir a inicio</a>
+            </div>
+          </div>
+
+
+          <div class="card shadow-prod border-0" *ngIf="VerificaIdentificador">
+            <div class="col-sm-12 col-md-12">
+              <h3 class="row justify-content-center mt-4">Enlace Invalido</h3>
+            </div>
+           <div>
+              <a [routerLink]="['/auth/recover-password-person']" queryParamsHandling="merge" class="btn btn-darker btn-block">Solicitar nuevamente</a>
             </div>
           </div>
         </div>
