--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/login-company/login-company.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/login-company/login-company.component.html
@@ -53,9 +53,8 @@
               </div>
               <div class="row justify-content-center">
                 <a
-                  href="/recuperar-contrasena-persona?applicationId={{
-                    applicationId
-                  }}"
+                  [routerLink]="['/auth/register-company']"
+                  queryParamsHandling="merge"
                   style="color: #000; border-bottom: 1px solid #000"
                   >Crea una ahora</a
                 >
