--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/login-person/components/login-person-form/login-person-form.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/login-person/components/login-person-form/login-person-form.component.html
@@ -85,10 +85,10 @@
   <div class="col-sm-12">         
     <div class="row justify-content-end mb-3">
       <a
-        href="/recuperar-contrasena-persona?applicationId={{ applicationId }}"
-        style="color: #000; border-bottom: 1px solid #000"
-        >Recuperar contraseña</a
-      >
+        [routerLink]="['/auth/recover-password-person']" queryParamsHandling="merge" 
+        style="color: #000; border-bottom: 1px solid #000"> 
+        Recuperar contraseña
+      </a>
     </div>
   </div>
 
