--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/recover-password-company/recover-password-company.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/recover-password-company/recover-password-company.component.html
@@ -53,9 +53,7 @@
                 </div>
                 <div class="row justify-content-center">
                   <a
-                    href="/recuperar-contrasena-persona?applicationId={{
-                      applicationId
-                    }}"
+                    [routerLink]="['/auth/register-company']" queryParamsHandling="merge" 
                     style="color: #000; border-bottom: 1px solid #000"
                     >Crea una ahora</a
                   >
@@ -68,10 +66,6 @@
               <h3 class="row justify-content-center mt-4">¡Listo!</h3>
               <label class="row justify-content-center mb-4 mt-4">Se te ha enviado un link a tu correo registrado</label>
             </div>
-  
-           <div>
-             <button  class="btn btn-darker btn-block">Ir a inicio</button> 
-           </div>
           </div>
         </div>
       </div>
