--- a/Prod.LoginUnico.Web/ClientApp/src/app/home/pages/profile/profile.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/home/pages/profile/profile.component.html
@@ -1,7 +1,7 @@
 <section class="py-6">
   <div class="container-fluid">
     <div class="row justify-content-center text-center">
-      <div class="col-md-12 col-lg-4">
+      <div class="col-sm-10 col-md-8 col-lg-6">
         <div class="card shadow-prod border-0">
           <div class="row justify-content-center">
             <div class="col-lg-3 order-lg-2">
@@ -69,14 +69,13 @@
             <div class="container" *ngIf="profile?.user">
               <hr class="my-2" />
               <h3 class="text-red">INFORMACIÓN DE CONTACTO</h3>
-              <app-profile-form [user]="profile?.user" (onSaveFormButton)="saveForm($event)" (onBackFormButton)="back()"></app-profile-form>
+              <app-profile-form
+                [user]="profile?.user"
+                (onSaveFormButton)="saveForm($event)"
+                (onBackFormButton)="back()"
+              ></app-profile-form>
             </div>
           </div>
-          <!-- <div class="card-footer">
-            <button (click)="back()" class="btn btn-outline-dark btn-block">
-              Regresar
-            </button>
-          </div> -->
         </div>
       </div>
     </div>
