--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/recover-password-company/recover-password-company.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/recover-password-company/recover-password-company.component.html
@@ -2,7 +2,7 @@
     <div class="container mt-5">
       <div class="row justify-content-center">
         <div class="col-lg-7 col-md-12">
-          <div class="card shadow-prod border-0">
+          <div class="card shadow-prod border-0" *ngIf="isVisibleForm">
             <div class="card-header bg-transparent">
               <div class="row">
                 <div class="col-sm-5">
