--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/login-company/login-company.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/login-company/login-company.component.html
@@ -42,7 +42,7 @@
                 <app-login-company-form
                   #loginForm
                   (onSendForm)="sendForm($event)"
-                  (onCancelFormButton)="onCancel()"
+                  (onCancelFormButton)="onReturnUrl()"
                 ></app-login-company-form>
               </div>
             </div>
