--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/register-company/register-company.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/register-company/register-company.component.html
@@ -68,7 +68,7 @@
                   [sunatResponse]="sunatResponse"
                   (onSendRucNumber)="onSendRucNumber($event)"
                   (onNextFormButton)="onNextStep($event)"
-                  (onCancelFormButton)="onCancel()"
+                  (onCancelFormButton)="onReturnUrl()"
                 ></app-register-company-first-step>
                 <app-register-company-second-step
                   #secondStep
