--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/register-person/register-person.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/register-person/register-person.component.html
@@ -60,7 +60,7 @@
                   (onSendRucNumber)="onSendRucNumber($event)"
                   (onSendDocumentNumber)="onSendDocumentNumber($event)"
                   (onNextFormButton)="onNextStep($event)"
-                  (onCancelFormButton)="onCancel()"
+                  (onCancelFormButton)="onReturnUrl()"
                 ></app-register-person-first-step>
                 <app-register-person-second-step
                   #secondStep
