--- a/Prod.LoginUnico.Web/ClientApp/src/app/shared/components/navbar/navbar.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/shared/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
 >
   <div class="container">
     <a class="navbar-brand">
-      <img src="assets/img/logo_produce.png" />
+      <img src="assets/img/logo_produce.PNG" />
     </a>
     <button
       class="navbar-toggler"
