--- a/Prod.LoginUnico.Web/ClientApp/src/app/home/pages/modification-password-person/modification-password-person.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/home/pages/modification-password-person/modification-password-person.component.html
@@ -62,7 +62,7 @@
                 ></app-modification-password-person-first-step>
                 <app-modification-password-person-second-step
                   #secondStep
-                  (onNextFormButton)="onNextStep($event)"
+                  (onNextFormButton)="onNextStep2($event)"
                   (onPreviewFormButton)="onPreviewStep()"
                 ></app-modification-password-person-second-step>
               </div>
