--- a/Prod.LoginUnico.Web/ClientApp/src/app/home/pages/modification-password/components/modification-password-first-step/modification-password-first-step.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/home/pages/modification-password/components/modification-password-first-step/modification-password-first-step.component.html
@@ -15,10 +15,16 @@
                 />
                 <div class="input-group-append">
                   <span
-                    class="input-group-text"
-                    [ngClass]="isInvalidField('password') ? ' is-invalid' : ''"
+                  class="input-group-text"
+                  [ngClass]="isInvalidField('password') ? ' is-invalid' : ''"
+                >
+                  <i
+                    class="fas"
+                    [ngClass]="!hidePassword ? 'fas fa-eye-slash' : 'fas fa-eye'"
+                    (click)="hidePassword = !hidePassword"
                   >
-                  </span>
+                  </i>
+                </span>
                 </div>
     
                 <div
