--- a/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/login-company/login-company.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/auth/pages/login-company/login-company.component.html
@@ -1,4 +1,4 @@
-<div class="main-content">
+<div class="main-content"  *ngIf="viewLogin">
   <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-lg-7 col-md-12">
