--- a/Prod.LoginUnico.Web/ClientApp/src/app/home/pages/company-users/company-users.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/home/pages/company-users/company-users.component.html
@@ -1,4 +1,4 @@
-<section class="py-6">
+<section class="py-6" *ngIf="profileResponse?.juridicPerson">
   <div class="container-fluid">
     <div class="row justify-content-center" *ngIf="companyUserSelected">
       <div class="col-md-12 col-lg-6 mb-4">
