--- a/Prod.LoginUnico.Web/ClientApp/src/app/pages/presentation/presentation.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/pages/presentation/presentation.component.html
@@ -1,53 +1,46 @@
-<app-navbar></app-navbar>
 <div class="main-content">
-  <section class="py-6">
-    <div class="container-fluid">
-      <div class="row justify-content-center">
-        <div class="col-sm-6">
-          <div class="card shadow-prod border-0">
-            <div class="card-header">
-              <h5 class="h3 mb-0">Iniciar sesión</h5>
-            </div>
-            <div class="card-body">
-              <button
-                [routerLink]="['/auth/login-person']"
-                queryParamsHandling="merge"
-                class="btn btn-outline-dark btn-block"
-              >
-                Persona natural
-              </button>
-              <button
-                [routerLink]="['/auth/login-company']"
-                queryParamsHandling="merge"
-                class="btn btn-outline-dark btn-block"
-              >
-                Persona jurídica
-              </button>
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-lg-5 col-md-6">
+        <div class="card shadow-prod border-0" style="height: 800px;">
+          <div class="card-header bg-transparent">
+            <div class="row">
+              <div class="col-sm-6">
+                <img
+                  class="img-fluid"
+                  src="../../../assets/img/logo_produce.PNG"
+                  alt="Produce"
+                  title="Produce"
+                />
+              </div>
             </div>
           </div>
-
-          <div class="card shadow-prod border-0">
-            <div class="card-header"><h5 class="h3 mb-0">Registrarse</h5></div>
-            <div class="card-body">
-              <button
-                [routerLink]="['/auth/register-person']"
-                queryParamsHandling="merge"
-                class="btn btn-outline-dark btn-block"
-              >
-                Persona natural
-              </button>
-              <button
-                [routerLink]="['/auth/register-company']"
-                queryParamsHandling="merge"
-                class="btn btn-outline-dark btn-block"
-              >
-                Persona jurídica
-              </button>
+          <div class="card-body">
+            <div class="row justify-content-center mb-2">
+              <div class="col-4 col-sm-6">
+                <img
+                  *ngIf="logo"
+                  class="img-fluid"
+                  [src]="logo"
+                  [alt]="applicationId"
+                  [title]="applicationId"
+                />
+              </div>
+            </div>
+            <div class="row justify-content-center" style="margin-top: 60px;">
+              <div class="col-12 text-center">
+                <h1 class="display-4">404</h1>
+              </div>
+              <div class="col-12 text-center">
+                <h1 class="display-4">PÁGINA NO<br>ENCONTRADA</h1>
+              </div>
+              <div class="col-12 text-center">
+                <p>La página o URL a la que intenta acceder no ha sido encontrada, para encontrar lo que buscas ingresa desde una de nuestras plataformas</p>
+              </div>
             </div>
           </div>
-        </div>
+        </div>  
       </div>
     </div>
-  </section>
+  </div>
 </div>
-<app-footer></app-footer>
