--- a/Prod.LoginUnico.Web/ClientApp/src/app/pages/presentation/presentation.component.html
+++ b/Prod.LoginUnico.Web/ClientApp/src/app/pages/presentation/presentation.component.html
@@ -1,8 +1,8 @@
 <div class="main-content">
   <div class="container mt-5">
     <div class="row justify-content-center">
-      <div class="col-lg-5 col-md-6">
-        <div class="card shadow-prod border-0" style="height: 800px;">
+      <div class="col-lg-6 col-md-6">
+        <div class="card shadow-prod border-0">
           <div class="card-header bg-transparent">
             <div class="row">
               <div class="col-sm-6">
@@ -16,25 +16,14 @@
             </div>
           </div>
           <div class="card-body">
-            <div class="row justify-content-center mb-2">
-              <div class="col-4 col-sm-6">
-                <img
-                  *ngIf="logo"
-                  class="img-fluid"
-                  [src]="logo"
-                  [alt]="applicationId"
-                  [title]="applicationId"
-                />
-              </div>
-            </div>
-            <div class="row justify-content-center" style="margin-top: 60px;">
-              <div class="col-12 text-center">
+            <div class="row justify-content-center">
+              <div class="col-12 text-center mb-2">
                 <h1 class="display-4">404</h1>
               </div>
-              <div class="col-12 text-center">
+              <div class="col-12 text-center mb-2">
                 <h1 class="display-4">PÁGINA NO<br>ENCONTRADA</h1>
               </div>
-              <div class="col-12 text-center">
+              <div class="col-12 text-center mb-2">
                 <p>La página o URL a la que intenta acceder no ha sido encontrada, para encontrar lo que buscas ingresa desde una de nuestras plataformas</p>
               </div>
             </div>
